--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "css-frameworks-ca",
+  "name": "workflow-ca",
   "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "sass src/scss:dist/css",
-    "start": "sass --watch src/scss:dist/css & live-server"
+    "start": "sass --watch src/scss:dist/css & live-server",
+    "format": "prettier -w src/**/*.js"
   },
   "keywords": [],
   "author": "Noroff",
