--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.27.0",
+    "eslint-plugin-jest": "^27.1.5",
     "husky": "^8.0.2",
     "jest": "^29.2.0",
     "lint-staged": "^13.0.3",
