--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "Noroff",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.4",
     "eslint": "^8.27.0",
     "eslint-plugin-jest": "^27.1.5",
     "husky": "^8.0.2",
