--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test-unit",
     "test-unit": "jest",
+    "test": "npm run test-e2e",
+    "test-e2e": "cypress open",
     "build": "sass src/scss:dist/css",
     "lint": "eslint src/**/*.js",
     "lint-fix": "eslint src/**/*.js --cache --fix",
