--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,10 +23,28 @@
                 "cypress/no-unnecessary-waiting": "off",
                 "no-unused-vars": "off"
             }
+        },
+        {
+            "files": [
+                "**/*.test.js"
+            ],
+            "env": {
+                "jest": true
+            },
+            "plugins": [
+                "jest"
+            ],
+            "extends": [
+                "plugin:jest/recommended"
+            ],
+            "rules": {
+                "jest/prefer-expect-assertions": "off"
+            }
         }
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
-    }
+    },
+    "rules": {}
 }
